adding responsive features

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 }
 html{
 	max-height:100vh !important;
-	height:100vh !important;
+	height:100vh !important;	
 }
 body{
+	overflow-x:scroll;
 	overflow-y:hidden;	
-	overflow-x: scroll;
 	font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
 }
 @media (max-width: 1200px){
@@ -27,6 +27,11 @@ body{
       text-decoration:none;
       color:inherit;
    }
+@media (min-width: 1350px){
+	.if-mobile{
+		display: none;
+	}
+}
 
 .welcome-container{
 	display: none;
@@ -41,7 +46,7 @@ body{
 }
 .welcome-text{
   mix-blend-mode:difference;
-  color:#ddd;
+  color:white;
   margin-top:50vh;
   transform:skewX(-45deg) translateY(-50%);
   font-size:10vw;
@@ -80,12 +85,12 @@ body{
 }
 
 .right{
-	-webkit-animation:goRight .5s ease-in 1s 1 normal forwards, grayscale .5s ease-in-out 1s 2 normal forwards;
-	animation: goRight .5s ease-in 1s 1 normal forwards, grayscale .5s ease-in-out 1s 2 normal forwards;
+	-webkit-animation:goRight .5s ease-in 1.4s 1 normal forwards, grayscale .8s ease-in-out 1.3s forwards;
+	animation: goRight .5s ease-in 1.4s 1 normal forwards, grayscale .8s ease-in-out 1.3s forwards;
 }
 .left{
-	-webkit-animation:goLeft .5s ease-in 1s 1 normal forwards running, grayscale .5s ease-in-out 1s 2 normal forwards;
-	animation: goLeft .5s ease-in 1s 1 normal forwards running, grayscale .5s ease-in-out 1s 2 normal forwards;
+	-webkit-animation:goLeft .5s ease-in 1.4s 1 normal forwards running, grayscale .8s ease-in-out 1.3s forwards;
+	animation: goLeft .5s ease-in 1.4s 1 normal forwards running, grayscale .8s ease-in-out 1.3s forwards;
 }
 
 /*
@@ -148,7 +153,7 @@ body{
 	position:relative;
 	display:inline-block;
 	align-items: center;
-	width:33.34vw;
+	width:33.333333vmax;
 	text-align:center;
 	height:100vh;
 	overflow:hidden;
@@ -336,17 +341,27 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 /*################################################*/
 
 .fixed-btn{
+	display: inline-block;
 	position:fixed;
-	top:60%;
+	top:1vh;
 	z-index: 2;
-}
-#fixed1{
-	left:2em;
-}
-#fixed2{
-	right:2em;	
+	left:50vw;
 }
 
+#fixed1{
+	transform:scale(.7) translateX(-450%);
+}
+#fixed2{
+	transform:scale(.7) translateX(300%);
+}
+@media(max-width:840px){
+	#fixed1{
+	transform:scale(.7) translateX(-350%);
+}
+#fixed2{
+	transform:scale(.7) translateX(200%);
+}
+}
 
 .part:nth-child(1) {
     background-color:rgba(179,227,241, 1);
@@ -386,8 +401,9 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 	position:fixed;
 	z-index: 3;
 	display:block;
-	right:10vmin;
+	left:50vw;
 	top:6vmin;
+	transform:translateX(-50%);
 }
 #menu-fixed .line{
 	height:6px;
@@ -412,7 +428,6 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 	transition: opacity .6s ease-out;
 	perspective: 1000px;
 }
-
 #menu-container.opac{
 	opacity:1;
 }
@@ -451,7 +466,7 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 	overflow:hidden;
 	padding:0;
 	z-index: 2;
-	color:#bbb;
+	color:#eee;
 	
 }
 .overlayPart.show-3D{
@@ -481,9 +496,9 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 }
 
 .overlayPart:hover .menu-description{
-	height:11rem;
+	height:13rem;
 	opacity: 1;
-	transform:translate(10%,-20%);
+	transform:translate(10%,-5%);
 }
 .overlayPart:hover .titleWrap{
 	transform:scale(1.3,1.3);
@@ -492,10 +507,10 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 	transform:translateY(0);
 }
 .overlayPart:hover .subtitle>h2{
-	transform: translateX(-200%);
+	transform: translateX(-80%);
 }
 .overlayPart:hover .sub2>h2{
-	transform: translateX(0%);
+	transform: translateX(23%);
 	opacity: .7;
 	transition-delay:.5s;
 }
@@ -524,7 +539,7 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 }
 
 .titleWrap{
-	margin-top:28vh;
+	margin-top:24vh;
 	height:5.3em;
 	overflow: hidden;
 	transform:scale(1.1,1.1);
@@ -548,6 +563,12 @@ GOT THE PATH OF THE ANCHOR TAG AND GIVEN THE CLASS COVER-SCREEN TO THE PARENT (.
 }
 .title{
 	font-size: 2.5rem;
+
+}
+@media(max-width: 1000px){
+	.title{
+		font-size:2rem;
+	}
 }
 .subtitle-container{
 	position: absolute;
