--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html{
 	max-height:100vh !important;
 	height:100vh !important;	
 }
+
 body{
 	overflow-x:scroll;
 	overflow-y:hidden;	
@@ -112,7 +113,7 @@ body{
 
 }
 .part h2{
-	margin-top:18vh;
+	margin-top:17vh;
 	font-family: Bowlby One SC !important;
 	color:rgba(250,250,250,.9);
 	line-height: 1.5;
@@ -132,7 +133,7 @@ body{
 	cursor:pointer;
 }
 .part p{
-	padding:2rem;
+	padding:0 2rem;
 	font-family: 'Caveat Brush', cursive !important;
 	font-size:1.5rem;
 	font-weight:600;
@@ -172,6 +173,13 @@ body{
 @media (max-width: 840px){
 	.part{
 		width:100vw;
+	}
+	.part p{
+		font-size:1.2rem;
+	}
+	.part h2{
+		font-size:2rem;
+		margin-top:4.5rem;
 	}
 }
 
