added finishedlodge project

--- a/sass-lodge/css/style.css
+++ b/sass-lodge/css/style.css
@@ -17,6 +17,15 @@
 .align-center {
   text-align: center; }
 
+.m-2 {
+  margin: 2rem; }
+
+.m-4 {
+  margin: 4rem; }
+
+.m-6 {
+  margin: 6rem; }
+
 .mb-8 {
   margin-bottom: 8rem; }
 
@@ -29,6 +38,18 @@
 .mb-2 {
   margin-bottom: 2rem; }
 
+.mr-2 {
+  margin-right: 2rem; }
+
+.mr-4 {
+  margin-right: 4rem; }
+
+.ml-2 {
+  margin-left: 2rem; }
+
+.ml-4 {
+  margin-left: 4rem; }
+
 .p-2 {
   padding: 2rem; }
 
@@ -40,6 +61,16 @@
 
 .p-8 {
   padding: 8rem; }
+
+@media (max-width: 56.25em) {
+  .mobile-up-2 {
+    margin-top: -2rem; }
+  .mobile-down-2 {
+    margin-bottom: -2rem; }
+  .mobile-up-4 {
+    margin-top: -4; }
+  .mobile-down-4 {
+    margin-bottom: -4; } }
 
 @keyframes welcomeButton {
   0% {
@@ -68,7 +99,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  color: #888; }
+  color: #555; }
 
 a {
   text-decoration: none; }
@@ -102,21 +133,20 @@ a {
       animation: welcomeUp 1.5s ease; }
 
 .secondary-header {
-  font-size: 4.2rem;
+  font-size: 4.4rem;
   text-transform: uppercase;
   font-weight: 900;
   text-align: center;
   display: inline-block;
   background: #22c1c3;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #fdbb2d, #22c1c3);
+  background: -webkit-linear-gradient(to right, #308bc8, #2fca32);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #fdbb2d, #22c1c3);
+  background: linear-gradient(to right, #308bc8, #2fca32);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 2px;
-  text-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.1);
   transition: all 0.3s; }
   @media (max-width: 75em) {
     .secondary-header {
@@ -133,6 +163,9 @@ a {
   font-size: 2.5rem;
   font-weight: 700;
   text-transform: uppercase; }
+  @media (max-width: 56.25em) {
+    .tertiary-header {
+      font-size: 3rem; } }
 
 .presentation {
   font-size: 1.5rem; }
@@ -231,7 +264,8 @@ ul {
   padding: 2rem 0 0 0;
   font-size: 1.3rem;
   max-height: 25rem;
-  overflow: hidden; }
+  overflow: hidden;
+  color: #add; }
   .footer > .row {
     padding-bottom: 2rem !important; }
   .footer-logo-box {
@@ -361,7 +395,7 @@ ul {
     content: "";
     width: 3rem;
     height: 3px;
-    background: #888;
+    background: #555;
     display: inline-block;
     border-radius: 3px;
     transition: all 0.3s; }
@@ -401,6 +435,9 @@ ul {
   opacity: 0;
   visibility: hidden;
   transition: all 0.4s; }
+  @media (max-width: 56.25em) {
+    .popup {
+      text-align: center; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -422,17 +459,24 @@ ul {
   .popup-left {
     width: 33.3333%;
     display: table-cell; }
+    @media (max-width: 56.25em) {
+      .popup-left {
+        width: 0; } }
   .popup-right {
     width: 66.6666%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
     background-color: rgba(0, 0, 0, 0.1); }
+    @media (max-width: 56.25em) {
+      .popup-right {
+        width: 100%; } }
   .popup-img {
     display: block;
     min-height: 25%;
     width: 100%; }
   .popup-text {
+    text-align: justify;
     font-size: 1.4rem;
     margin-bottom: 4rem;
     column-count: 2;
@@ -457,6 +501,8 @@ ul {
     line-height: 1; }
   .popup-close:hover {
     color: #4db2d2; }
+  .popup .button-animated {
+    box-shadow: 0 0 3px 2px #3dfd1b; }
 
 .button-animated {
   animation: welcomeButton 0.3s ease-out 1s;
@@ -474,6 +520,9 @@ ul {
     position: relative;
     border: none;
     cursor: pointer; }
+    @media (max-width: 56.25em) {
+      .button-animated, .button-animated:link, .button-animated:visited {
+        font-size: 1.8rem; } }
   .button-animated:hover {
     transform: translateY(-0.2rem);
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
@@ -530,12 +579,12 @@ ul {
     .gallery {
       position: relative;
       max-width: 70%;
-      transform: translate(25%, 13rem); } }
+      transform: translate(25%, 15rem); } }
   @media (max-width: 37.5em) {
     .gallery {
       position: relative;
       max-width: 80%;
-      transform: translate(10%, 17rem); } }
+      transform: translate(10%, 25rem); } }
   .gallery-photo {
     width: 50%;
     position: absolute;
@@ -560,7 +609,7 @@ ul {
     .gallery-photo:hover {
       transform: scale(1.05);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.2);
-      outline: 1.5rem solid #c6ffdd;
+      outline: 1.5rem solid #f7797d;
       z-index: 10; }
     @media (max-width: 37.5em) {
       .gallery-photo {
@@ -585,7 +634,7 @@ ul {
     -webkit-background-clip: text;
     color: transparent; }
   .infobox-text {
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     padding: 2rem; }
   .infobox:hover {
     transform: translateY(-10px) scale(1.03);
@@ -596,16 +645,17 @@ ul {
   perspective: 1000px;
   -moz-perspective: 1000px;
   position: relative;
-  min-height: 43rem;
+  min-height: 48rem;
   transform: translateX(10%); }
   .card-side {
-    min-height: 43rem;
+    min-height: 48rem;
     position: absolute;
     width: 80%;
     backface-visibility: hidden;
     transition: all 0.7s ease-in-out;
     border-radius: 3px;
-    overflow: hidden; }
+    overflow: hidden;
+    box-shadow: 0 0 3rem -0.5rem rgba(0, 0, 0, 0.2); }
     .card-side-front {
       background-color: white; }
     .card-side-back {
@@ -658,18 +708,24 @@ ul {
   .card-descr {
     position: relative;
     display: block;
-    font-size: 1.3rem;
     width: 70%;
-    margin: 20rem auto 1rem auto; }
+    margin: 20rem auto 1rem auto;
+    font-size: 1.4rem;
+    font-weight: 800;
+    padding: 2rem 0; }
   .card-list {
+    font-size: 1.4rem;
     width: 70%;
     margin: 0 auto;
-    padding: 0.5rem; }
+    padding: 0.5rem;
+    font-style: oblique;
+    text-transform: capitalize;
+    font-weight: 600; }
     .card-list li {
       padding: 1rem 2rem;
       border-top: solid 1px rgba(0, 0, 0, 0.2); }
   .card-wrap {
-    height: 43rem;
+    height: 48rem;
     position: relative; }
     .card-wrap a {
       margin-top: 100%; }
@@ -690,22 +746,142 @@ ul {
       transition: transform 0.3s ease-out; }
     .card-price-money {
       font-weight: 300; }
+  @media (max-width: 56.25em) {
+    .card-side {
+      min-height: 10rem;
+      height: auto;
+      position: relative;
+      width: 80%;
+      overflow: hidden;
+      border-radius: 3px;
+      box-shadow: 0 0 3rem -0.5rem rgba(0, 0, 0, 0.2); }
+      .card-side-front {
+        background-color: white;
+        padding-bottom: 30rem; }
+      .card-side-back {
+        margin-top: -28rem;
+        background-color: white;
+        transform: rotateY(0deg);
+        border-radius: 0 0 3px 3px;
+        clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
+        box-shadow: 0 0 3rem -0.5rem rgba(0, 0, 0, 0.2); }
+        .card-side-back1 {
+          background-image: linear-gradient(25deg, #c6ffdd, #4db2d2); }
+        .card-side-back2 {
+          background-image: linear-gradient(25deg, #f7797d, #ec4f3a); }
+        .card-side-back3 {
+          background-image: linear-gradient(25deg, #fbd886, #ffa023); }
+    .card:hover .card-side-front {
+      transform: rotateY(0deg); }
+    .card:hover .card-side-back {
+      transform: rotateY(0deg); }
+    .card-picture {
+      background-size: cover;
+      background-position: center;
+      background-blend-mode: overlay;
+      position: absolute;
+      height: 32%;
+      width: 100%;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 95%, 72% 90%, 58% 71%, 40% 87%, 0 80%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 72% 95%, 54% 75%, 40% 90%, 0 87%); }
+      .card-picture-1 {
+        background-image: linear-gradient(25deg, #c6ffdd, #4db2d2), url("../img/malga3.jpg"); }
+      .card-picture-2 {
+        background-image: linear-gradient(25deg, #f7797d, #ec4f3a), url("../img/malga2.jpg"); }
+      .card-picture-3 {
+        background-image: linear-gradient(25deg, #fbd886, #ffa023), url("../img/malga1.jpg"); }
+    .card-title {
+      position: absolute;
+      top: 10%;
+      right: 5%;
+      z-index: 2;
+      color: #fff;
+      text-transform: uppercase;
+      font-size: 2.5rem;
+      width: 50%;
+      text-align: right; }
+    .card-title-span {
+      padding: 0.5rem 1rem;
+      -webkit-box-decoration-brake: clone; }
+      .card-title-span-1 {
+        background-image: linear-gradient(25deg, rgba(198, 255, 221, 0.8), rgba(77, 178, 210, 0.8)); }
+      .card-title-span-2 {
+        background-image: linear-gradient(25deg, rgba(247, 121, 125, 0.8), rgba(236, 79, 58, 0.8)); }
+      .card-title-span-3 {
+        background-image: linear-gradient(25deg, rgba(251, 216, 134, 0.8), rgba(255, 160, 35, 0.8)); }
+    .card-descr {
+      font-size: 2rem;
+      position: relative;
+      display: block;
+      font-size: 1.5rem;
+      width: 70%;
+      margin: 34rem auto 1rem auto; } }
+  @media (max-width: 56.25em) and (max-width: 56.25em) {
+    .card-descr {
+      font-size: 2rem; } }
+  @media (max-width: 56.25em) {
+    .card-list {
+      width: 70%;
+      margin: 0 auto;
+      padding: 0.5rem;
+      font-size: 2rem;
+      font-size: 1.5rem;
+      font-style: oblique;
+      text-transform: capitalize;
+      font-weight: 600; }
+      .card-list li {
+        padding: 1rem 2rem;
+        border-top: solid 1px rgba(0, 0, 0, 0.2); } }
+  @media (max-width: 56.25em) and (max-width: 56.25em) {
+    .card-list {
+      font-size: 2rem; } }
+  @media (max-width: 56.25em) {
+    .card-wrap {
+      height: 26rem;
+      position: relative; }
+      .card-wrap a {
+        position: relative;
+        margin: 6rem 0 2rem 0; }
+      .card-wrap:hover .card-price-title {
+        transform: translateX(0); }
+    .card-price {
+      font-size: 3.5rem;
+      display: block;
+      color: white;
+      text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+      position: relative;
+      margin-top: 2rem; }
+      .card-price p {
+        padding: 0; }
+      .card-price-title {
+        transform: translateY(-20%);
+        transition: transform 0.3s ease-out; }
+      .card-price-money {
+        font-weight: 300; } }
 
 .review {
   width: 65%;
   margin: 1rem auto 8rem auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.2);
   padding: 4rem 6rem;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   transform: skewX(10deg);
   background: white;
   border-radius: 3px;
   background-image: linear-gradient(10deg, rgba(192, 233, 240, 0.5), rgba(255, 223, 180, 0.5));
   overflow: hidden; }
   @media (max-width: 37.5em) {
-    .review-opt {
-      color: transparent;
-      visibility: hidden; } }
+    .review {
+      transform: skewX(2deg); } }
+  .review-opt {
+    position: relative;
+    display: block; }
+    @media (max-width: 37.5em) {
+      .review-opt {
+        color: transparent;
+        visibility: hidden;
+        height: 0px;
+        position: absolute; } }
   .review-shape {
     width: 12rem;
     height: 12rem;
@@ -714,23 +890,32 @@ ul {
     float: left;
     shape-outside: circle(50% at 50% 50%);
     -webkit-shape-outside: circle(50% at 50% 50%);
-    transform: translateX(-20%) skewX(-10deg);
     overflow: hidden;
-    position: relative; }
+    position: relative;
+    transform: translateX(-20%) skewX(-10deg); }
+    @media (max-width: 37.5em) {
+      .review-shape {
+        transform: translateX(-20%) skewX(-2deg); } }
     .review-shape img {
       height: 110%;
       transform: scale(1.2) translateX(-8%);
       transition: all 0.5s; }
   .review-text {
     transform: skewX(-10deg);
-    text-shadow: -1px -1px 1px white; }
+    text-shadow: -1px -1px 1px white;
+    min-width: 18rem; }
+    @media (max-width: 37.5em) {
+      .review-text {
+        transform: skewX(-2deg);
+        font-size: 1.8rem; } }
     .review-text .comment {
+      color: #2c2c2c;
       font-weight: 400;
-      min-width: 28rem;
       max-height: 15rem; }
       @media (max-width: 56.25em) {
         .review-text .comment {
-          margin-bottom: 2rem; } }
+          font-size: 2rem;
+          height: calc(100% -2rem); } }
   .review-figcaption {
     position: absolute;
     top: 50%;
@@ -780,6 +965,10 @@ ul {
     @media (max-width: 56.25em) {
       .form-input {
         width: calc(100vw - 150% + 40%); } }
+    @media (max-width: 37.5em) {
+      .form-input {
+        width: 100%;
+        padding: 1.5rem 0; } }
     .form-input:focus {
       outline: none;
       box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2);
@@ -846,10 +1035,13 @@ ul {
   .form button {
     box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.2);
     border: 1px solid #b0deb0;
-    margin-bottom: 4rem; }
+    margin: 2rem auto; }
+  @media (max-width: 56.25em) {
+    .form-mobile-center {
+      text-align: center; } }
 
 .section-about {
-  color: #888;
+  color: #555;
   background-color: #fafafa;
   padding: 16rem 0;
   margin-top: -20rem;
@@ -861,13 +1053,25 @@ ul {
       margin-bottom: 5rem; } }
   @media (max-width: 37.5em) {
     .section-about {
-      padding: 20rem 0 25rem 0; } }
+      padding: 20rem 0 25rem 0;
+      font-size: 2rem; } }
   @media (max-width: 56.25em) {
     .section-about .if-mobile {
       display: none; } }
   @media (max-width: 56.25em) {
     .section-about .row {
       margin-top: -6rem; } }
+  .section-about-presentation {
+    font-size: 1.5rem;
+    margin-bottom: 2rem; }
+    .section-about-presentation:not(:last-child) {
+      margin-bottom: 2rem; }
+    @media (max-width: 75em) {
+      .section-about-presentation {
+        font-size: 1.8rem; } }
+    @media (max-width: 56.25em) {
+      .section-about-presentation {
+        font-size: 2rem; } }
 
 .info-section {
   padding: 5rem 0;
@@ -880,8 +1084,10 @@ ul {
     transform: skewY(-4deg); }
 
 .section-offers {
-  color: #888;
+  color: #555;
   background-color: #fafafa;
+  background: whitesmoke;
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 10rem 0;
   text-align: center;
   margin-top: -6rem; }
@@ -906,9 +1112,9 @@ ul {
   background-size: cover;
   background-position: right;
   border-radius: 2px; }
-  @media (max-width: 75em) {
+  @media (max-width: 56.25em) {
     .booking {
-      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.5) 70%, transparent 70%, transparent 100%), url(../img/alpine-section-features.jpg); } }
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.5) 100%), url(../img/alpine-section-features.jpg); } }
 
 section {
   overflow: hidden; }
