--- a/styles.css
+++ b/styles.css
@@ -347,19 +347,16 @@ body{
 .part p{
 	padding:0 2rem;
 	font-family: 'Caveat Brush', cursive !important;
-	font-size:1.5rem;
-	font-weight:600;
+	font-size: 1.7vmax;
+	font-weight:400;
 	backface-visibility:hidden;
 	color:snow;
 	letter-spacing: .1em;
-	text-shadow:1px 0px 0 #444,
-				0px 1px 0 #333,
-				2px 1px 0 #222,
-				1px 2px 0 #111,
-			   -1px -1px 0 #bbb,
-				0 0 3px rgba(0,0,0,.8) ;/*the shadow under all*/
+	text-shadow: 2px 1px 0 #222, 1px 1px 0 #111, 0 0 1px rgba(0,0,0,.8);/*the shadow under all*/
 	transform:scale(.9);
 	transition:transform 1s ease-out;
+	line-height: 1.5;
+	margin-top: 5vh;
 }
 .part{
 	position:relative;
@@ -380,17 +377,21 @@ body{
 	.part{
 		width:50vw;
 	}
+	.part p{
+		font-size: 3vmax;
+	}
 }
 @media (max-width: 840px){
 	.part{
 		width:100vw;
 	}
 	.part p{
-		font-size:1.2rem;
+		font-size: 4vmax;
+		line-height: 1;
 	}
 	.part h2{
-		font-size:2rem;
-		margin-top:4.5rem;
+		font-size: 5vmax;
+		margin-top: 20vh;
 	}
 }
 
@@ -415,7 +416,7 @@ body{
 	transform:scale(1,1);
 }
 .part:hover p{
-	transform:translateY(10%) scale(1);
+	transform:translateY(-10%) scale(1);
 }
 /*
 .part:active{
@@ -758,16 +759,7 @@ animation: placingNavigation 1s 2s both;
 	transition-delay:.5s;
 }
 
-/*  MEDIA QUERYES  */
-@media (max-width: 1200px){
-	.overlayPart.show-3D:nth-child(1) {
-		display:none;
-	}
-	.overlayPart{
-		width:50%;
-	} 
-}
-/* sub menu */
+/*//////////////////////////////////////////////////////////////////////////////////*/
 
 .menu-description{
 	overflow: hidden;
@@ -830,6 +822,34 @@ animation: placingNavigation 1s 2s both;
 	opacity: 0;
 	transition: all .5s ease-out ,opacity .5s ease-in-out;
 }
+
+
+/*  MEDIA QUERYES  */
+@media (max-width: 1200px){
+	.overlayPart.show-3D:nth-child(1) {
+		display:none;
+	}
+	.overlayPart{
+		width:50%;
+	}
+	.subtitle{
+		width:40vw;
+	} 
+}
+
+@media (max-width: 600px){
+	.overlayPart.show-3D:nth-child(3) {
+		display:none;
+	}
+	.overlayPart{
+		width:100%;
+	}
+	.subtitle{
+		width:90vw;
+	} 
+	
+}
+/* sub menu */
 
 /*##################################################################################################################*/
 /*##################################################################################################################*/
